이미지폴더 퍼블릭폴더로 이동

--- a/public/order.html
+++ b/public/order.html
@@ -293,13 +293,13 @@
 <div class="cafe-gallery" style="display: flex; flex-direction: column; gap: 8px; align-items: center; margin-top: 10px;">
   <!-- 1층 (윗줄) -->
   <div style="display: flex; gap: 10px;">
-    <img src="../images/101.jpg" alt="카페 전경1" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
-    <img src="../images/102.jpg" alt="카페 전경2" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
+    <img src="images/101.jpg" alt="카페 전경1" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
+    <img src="images/102.jpg" alt="카페 전경2" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
   </div>
   <!-- 2층 (아랫줄) -->
   <div style="display: flex; gap: 10px;">
-    <img src="../images/104.jpg" alt="카페 전경3" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
-    <img src="../images/105.jpg" alt="카페 전경4" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
+    <img src="images/104.jpg" alt="카페 전경3" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
+    <img src="images/105.jpg" alt="카페 전경4" style="width: 300px; height: 200px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
   </div>
 </div>
   <script>
