오더페이지 업데이트

--- a/public/order.html
+++ b/public/order.html
@@ -289,18 +289,10 @@
   <div style="margin-bottom:10px;">
     <b>카페 위치:</b> 가평군 호반로 1526 <br>(월드빌리지에서 차량 10분) 설악 IC 방향
   </div>
-<!-- 갤러리 전체를 감싸는 div -->
-<div class="cafe-gallery" style="display: flex; flex-direction: column; gap: 8px; align-items: center; margin-top: 10px;">
-  <!-- 1층 (윗줄) -->
-  <div style="display: flex; gap: 10px;">
-    <img src="images/101.jpg" alt="카페 전경1" style="width: 200px; height: 150px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
-    <img src="images/102.jpg" alt="카페 전경2" style="width: 200px; height: 150px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
-  </div>
-  <!-- 2층 (아랫줄) -->
-  <div style="display: flex; gap: 10px;">
-    <img src="images/104.jpg" alt="카페 전경3" style="width: 200px; height: 150px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
-    <img src="images/105.jpg" alt="카페 전경4" style="width: 200px; height: 150px; border-radius: 8px; border: 1px solid #fdba74; cursor: pointer;" onclick="openImageModal(this.src)">
-  </div>
+<div style="margin-top: 18px;">
+  <a href="https://naver.me/FtTh8MWm" target="_blank" style="color:#2563eb; font-weight:bold; text-decoration:underline;">
+    📍 네이버 지도에서 카페 위치 보기
+  </a>
 </div>
   <script>
     let menuData = [];
