--- a/public/order.html
+++ b/public/order.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>테이블 주문</title>
+  <title>가평 월드빌리지 메뉴 주문시스템</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -296,17 +296,30 @@
 </div>
   <script>
     let menuData = [];
+    // 영업시간: 10시 ~ 22시
+    function isBusinessHour() {
+      const now = new Date();
+      const hour = now.getHours();
+      return hour >= 10 && hour < 22;
+    }
     // URL에서 table 파라미터 읽기
     function getTableFromUrl() {
       const params = new URLSearchParams(window.location.search);
       return params.get('table');
     }
-    // 페이지 로드 시 테이블 번호 자동 입력
+    // 페이지 로드 시 테이블 번호 자동 입력 및 영업시간 체크
     window.onload = function() {
       const tableNum = getTableFromUrl();
       if (tableNum) {
         document.getElementById('tableNum').value = tableNum;
         document.getElementById('tableNum').readOnly = true;
+      }
+      // 영업시간 체크
+      if (!isBusinessHour()) {
+        document.getElementById('orderBtn').disabled = true;
+        document.getElementById('orderBtn').style.background = '#ccc';
+        document.getElementById('orderBtn').innerText = '영업시간이 아닙니다';
+        document.getElementById('result').innerHTML = '<span style="color:#ff4e50;">주문 가능 시간은 오전 10시 ~ 오후 10시입니다.</span>';
       }
     };
     // 메뉴 불러오기
@@ -357,7 +370,8 @@
               <span class="menu-name">${menu.name}</span>
               <span class="menu-price">${menu.price.toLocaleString()}원</span>
               <span class="menu-qty">
-                <input type="number" min="0" max="20" value="0" id="menu_${menu.id}">
+                <input type="number" min="0" max="20" value="0" id="menu_${menu.id}" ${menu.soldOut ? 'disabled' : ''}>
+                ${menu.soldOut ? '<span style="color:#ff4e50;font-weight:bold;margin-left:8px;">품절</span>' : ''}
               </span>
             </div>`
           ).join('');
@@ -367,7 +381,8 @@
               <span class="menu-name">${menu.name}</span>
               <span class="menu-price">${menu.price.toLocaleString()}원</span>
               <span class="menu-qty">
-                <input type="number" min="0" max="20" value="0" id="menu_${menu.id}">
+                <input type="number" min="0" max="20" value="0" id="menu_${menu.id}" ${menu.soldOut ? 'disabled' : ''}>
+                ${menu.soldOut ? '<span style="color:#ff4e50;font-weight:bold;margin-left:8px;">품절</span>' : ''}
               </span>
             </div>`
           ).join('');
