--- a/public/admin.html
+++ b/public/admin.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>관리자 주문 목록</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -18,8 +19,14 @@
       --card-shadow: 0 8px 32px 0 rgba(79,140,255,0.10);
       --border-glass: 1.5px solid rgba(79,140,255,0.13);
     }
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     html, body {
-      height: 100%;
+      width: 100vw;
+      min-width: 100vw;
+      max-width: 100vw;
+      overflow-x: hidden;
       margin: 0;
       padding: 0;
       background: var(--main-bg);
@@ -37,8 +44,11 @@
     }
     .container {
       width: 100%;
-      max-width: 540px;
+      max-width: 100vw;
+      min-width: 0;
       margin: 48px auto 0 auto;
+      padding-left: 14px !important;
+      padding-right: 14px !important;
       background: var(--glass-bg);
       border-radius: 32px;
       box-shadow: var(--card-shadow);
