--- a/public/order.html
+++ b/public/order.html
@@ -46,8 +46,8 @@
       max-width: 100vw;
       min-width: 0;
       margin: 48px auto 0 auto;
-      padding-left: 0 !important;
-      padding-right: 0 !important;
+      padding-left: 14px !important;
+      padding-right: 14px !important;
       background: var(--glass-bg);
       border-radius: 32px;
       box-shadow: var(--card-shadow);
