--- a/public/admin.html
+++ b/public/admin.html
@@ -44,7 +44,7 @@
     }
     .container {
       width: 100%;
-      max-width: 100vw;
+      max-width: 420px;
       min-width: 0;
       margin: 48px auto 0 auto;
       padding-left: 14px !important;
