오더페이지 업데이트

--- a/public/order.html
+++ b/public/order.html
@@ -93,7 +93,7 @@
       justify-content: space-between;
       background: rgba(255,255,255,0.95);
       border-radius: 16px;
-      padding: 16px 18px;
+      padding: 16px 30px;
       margin-bottom: 16px;
       box-shadow: 0 2px 12px rgba(79,140,255,0.08);
       border: 1.5px solid #e0e7ff;
@@ -239,7 +239,7 @@
       font-size: 1.15em;
       font-weight: bold;
       color: #fd0000;
-      margin: 18px 0 10px 0;
+      margin: 18px 0 10px 20px;
       letter-spacing: 1px;
       text-align: left;
     }
@@ -290,7 +290,7 @@
   </div>
   <div style="margin-bottom:10px;">
     저희 월드빌리지에 오신 분들께만 드리는 혜택!<br>
-    <b>가평 "카페 레이크애비뉴"</b>에서 <span style="color:#ea580c;font-weight:600;"><br>음료 전품목 10% 할인</span>을 받으실 수 있습니다.<br>
+    <b>카페 "가평 레이크애비뉴"</b>에서 <span style="color:#ea580c;font-weight:600;"><br>음료 전품목 10% 할인</span>을 받으실 수 있습니다.<br>
     <span style="color:#b91c1c;">(※ 베이커리류는 할인 제외)</span>
   </div>
   <div style="margin-bottom:10px;">
