--- a/public/order.html
+++ b/public/order.html
@@ -189,7 +189,8 @@
     }
     @media (max-width: 400px) {
       .container { padding: 0; }
-      .menu-item { padding: 8px 0; border-radius: 0; }
+      .menu-item { padding: 16px 30px; border-radius: 0; }
+      .menu-section-title { margin: 18px 0 10px 20px; }
     }
     .account-info {
       margin-top: 18px;
